# wedding_list_backend

./: .env  Cargo.toml  Dockerfile  Dockerfile.local  docker-compose.yml  fly.toml  invites.db  start.sh
migrations/: 20250905161959_init.sql
src/: config.rs  invites.rs  main.rs
