[package]
name = "weeding_list_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tower-http = {version = "0.6.6", features = ["cors"]}
dotenvy = "0.15"
